Bug 1492484 - Do not reprioritize pushed streams on tab switch. r=kershaw a=pascalc

Right now, pushed streams don't get put in the priority hierarchy
anyway, and with the code as it was, we were sending an illegal PRIORITY
frame for stream 0. This prevents that from happening. We should
probably think about putting pushed streams in the priority hierarchy at
some point.

Differential Revision: https://phabricator.services.mozilla.com/D6500

--HG--
extra : source : 6341eaf530a716d406b0d84ea21c343fc1c67dd6